# partaker

./: .gitignore  .zshrc  CELL_VIEW_ANALYSIS_REPORT.md  LICENSE  ND2_Segmentation.ipynb  QUICK_REFERENCE.md  README.md  nd2_merger.ipynb  pyproject.toml  requirements.txt  run.sh  setup_deps.sh
.run/: Debug ND2.run.xml
doc/: Partaker_Architecture.drawio
docs/: WINDOWS.md  index.md  tutorial_0.md  tutorial_1.md
notebooks/: Hackathon_challenges.ipynb  Laurens_Plots.ipynb  ND2_Merge.ipynb  ND2_Segmentation.ipynb  example_tracking_pipeline-features(1).ipynb  k-means.ipynb  registration_test.ipynb
notebooks/jpy_notebooks/: Hackathon_challenges.ipynb  Laurens_Plots.ipynb  backup_challenges.ipynb  example_tracking_pipeline-features(1).ipynb
scripts/: create_ground_truth.py
src/: .gitignore  btrack.ipynb  cell_metrics.csv  example_tracking_pipeline-features(1).ipynb  experiment.py  image_data.py  image_functions.py  k-means.ipynb  lineage_visualization.py  main.py  metrics_service.py  morphology.py  old_main.py  population.py  segmentation.py  track_view.py  tracking.py  ui(backup).py  ui-bk2.py  ui.py
src/config/: btrack_config.json
src/fluorescence/: rpu.py  sc.py
src/image/: image_alignment.py
src/kmeans/: heyo.csv  k-means.ipynb
src/nd2_analyzer/: __init__.py  __main__.py  benchmark.py  create_ground_truth.py
src/nd2_analyzer/analysis/: cell_history.py  cell_view_data.py  lineage_visualization.py  metrics_service.py  morphology.py  population.py  roi_helper.py  test_cell_history.py
src/nd2_analyzer/analysis/fluo/: rpu.py  sc.py
src/nd2_analyzer/analysis/morphology/: morphology.py  morphologyworker.py
src/nd2_analyzer/analysis/segmentation/: segmentation.py  segmentation_benchmark.py  segmentation_cache.py  segmentation_models.py  segmentation_service.py  unet.py  unet_torch.py
src/nd2_analyzer/analysis/tracking/: track_view.py  tracking.py
src/nd2_analyzer/analysis/tracking/config/: btrack_config.json
src/nd2_analyzer/data/: appstate.py  experiment.py  frame.py  image_data.py
src/nd2_analyzer/morphology/: morphologyworker.py
src/nd2_analyzer/ui/: app.py  cartoony.py  roisel.py
src/nd2_analyzer/ui/biofilms/: __init__.py  analysis_mode.py  colony_separation_widget.py  colony_separator.py
src/nd2_analyzer/ui/dialogs/: __init__.py  about.py  colony_auto_verifier.py  colony_roi_selector.py  crop_selection.py  experiment.py  export_raw.py  roisel.py
src/nd2_analyzer/ui/widgets/: __init__.py  cell_view_dialog.py  lineage_dialog.py  morphology.py  motility_widget.py  population.py  segmentation.py  tracking_widget.py  view_area.py
src/nd2_analyzer/utils/: __init__.py  image_alignment.py  image_functions.py  performance.py  registration.py  sliding_prediction.py
src/partaker/: .gitignore  __init__.py  __main__.py
src/partaker/analysis/: lineage_visualization.py  metrics_service.py  population.py
src/partaker/analysis/fluo/: sc.py
src/partaker/analysis/morphology/: morphology.py  morphologyworker.py
src/partaker/analysis/segmentation/: convert.py  segmentation_cache.py  segmentation_models.py  segmentation_service.py  unet.py
src/partaker/analysis/tracking/: track_view.py  tracking.py
src/partaker/data/: appstate.py  experiment.py  frame.py  image_data.py
src/partaker/ui/: app.py  cartoony.py
src/partaker/ui/dialogs/: crop_selection.py  experiment.py  export_raw.py  roisel.py
src/partaker/ui/widgets/: __init__.py  lineage_dialog.py  morphology.py  motility_widget.py  population.py  segmentation.py  tracking_manager.py  tracking_widget.py  view_area.py
src/partaker/utils/: __init__.py  performance.py  registration.py  sliding_prediction.py
src/segmentation/: segmentation_cache.py  segmentation_models.py  segmentation_service.py  unet.py
src/ui/: about.py  app.py  cartoony.py  roisel.py
src/ui/dialogs/: __init__.py  about.py  experiment.py  roisel.py
src/ui/widgets/: __init__.py  density_animation.py  lineage_dialog.py  morphology.py  motility_widget.py  population.py  segmentation.py  tracking_manager.py  tracking_widget.py  view_area.py
tests/: conftest.py  test_population_channels.py  test_segmentation.py  test_tiff_loading.py
tests/data/: sample_frame.tif
training/: README.md
