[project]
name = "nd2-timelapse-analyzer"
version = "0.1.0"
description = ""
authors = [{ name = "Henrique Hiram" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = { text = "LGPL" }
dependencies = [
    "pyside6 (==6.7.2)",
    "tensorflow-macos (==2.15)",
    "polars (>=1.30.0,<2.0.0)",
    "nd2 (>=0.10.3,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "keras-applications (==1.0.8)",
    "imageio (>=2.37.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pypubsub (>=4.0.3,<5.0.0)",
    "cachier (>=3.1.2,<4.0.0)",
    "omnipose (>=1.0.6,<2.0.0)",
    "scipy (==1.11.4)",
    "torch (>=2.7.0,<3.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "vulture (>=2.14,<3.0)",
    "cellpose (>=4.0.6,<5.0.0)",
    "av (>=15.0.0,<16.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "numba (>=0.61.2,<0.62.0)",
    "seaborn>=0.13.2",
    "pyarrow>=21.0.0",
]

[project.gui-scripts]
gui = "nd2_analyzer:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nd2_analyzer"]
