[project]
name = "partaker"
version = "0.1.0"
description = "Bacterial fluorescence analysis Tool for fluorescence microscopy"
authors = [{ name = "Henrique Hiram" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "LGPL" }
dependencies = [
    "pyside6 (==6.7.2)",
    "polars (>=1.30.0,<2.0.0)",
    "nd2 (>=0.10.3,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "keras-applications (==1.0.8)",
    "imageio (>=2.37.0,<3.0.0)",
    # TIFF / OME-TIFF import support
    "tifffile (>=2024.1.30)",
    "zarr (>=2.17.0,<3.0.0)",
    "ome-types (>=0.5.0)",
    "lxml (>=5.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pypubsub (>=4.0.3,<5.0.0)",
    "cachier (>=3.1.2,<4.0.0)",
    "omnipose (>=1.0.6,<2.0.0)",
    "scipy (==1.11.4)",
    "torch (>=2.7.0,<3.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "vulture (>=2.14,<3.0)",
    "cellpose (>=4.0.6,<5.0.0)",
    "av (>=15.0.0,<16.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "numba (>=0.61.2,<0.62.0)",
    "seaborn>=0.13.2",
    "pyarrow>=21.0.0",
]

[project.gui-scripts]
partaker_app = "nd2_analyzer:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nd2_analyzer"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes (undefined names, unused imports, etc.)
  "W",    # pycodestyle warnings
  "B",    # bugbear (common bugs and design issues)
  "I",    # isort (import sorting)
  "UP",   # pyupgrade (modernize syntax)
  "RUF",  # ruff-specific rules
  "N",    # pep8-naming
  "ASYNC", # async pitfalls
]
ignore = ["E501"]  # line too long (ruff format handles this)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

