
[project]
name = "partaker"
version = "0.1.0"
description = "Bacterial fluorescence analysis Tool for fluorescence microscopy"
authors = [{ name = "Henrique Hiram" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "LGPL" }
dependencies = [
    "pyside6 (==6.7.2)",
    "polars (>=1.30.0,<2.0.0)",
    "nd2 (>=0.10.3,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    # Upper bound required: tifffile 2025.x drops the zarr 2 code path, so
    # `tifffile.imread(..., aszarr=True)` (used to load TIFFs lazily in
    # ImageData) raises "zarr 2.x < 3 is not supported" against our pinned
    # zarr<3. Without this bound, TIFF loading fails entirely.
    "tifffile (>=2024.1.30,<2025)",
    "zarr (>=2.17.0,<3.0.0)",
    "ome-types (>=0.5.0)",
    "lxml (>=5.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pypubsub (>=4.0.3,<5.0.0)",
    "cachier (>=3.1.2,<4.0.0)",
    # Pinned to the 1.0.x series: the reported benchmark and the deposited ground-truth
    # masks were produced with omnipose 1.0.6. Omnipose 1.1.x yields slightly different
    # masks, so a 1.1.x install does not reproduce the published Table S1 values.
    "omnipose (>=1.0.6,<1.1)",
    # omnipose only requires ncolor>=1.2.1 (no upper bound), but omnipose 1.0.6 does not
    # work with ncolor >= 1.5 (import fails) and cellpose_omni's imports break entirely on
    # ncolor 2.x. Without this pin a fresh resolve (e.g. `uv pip install -e .`, which
    # ignores uv.lock) installs a newer ncolor and the Omnipose models fail to load.
    "ncolor (>=1.4.5,<1.5)",
    # omnipose 1.0.6 imports `pkg_resources` at module load. setuptools 81 removed
    # pkg_resources, so on a fresh environment (which resolves the newest setuptools)
    # `import omnipose` fails with ModuleNotFoundError and the Omnipose models become
    # unavailable. Existing developer environments only work because they predate 81.
    "setuptools (<81)",
    "scipy (==1.11.4)",
    "torch>=2.7.0,<3.0.0",
    "natsort (>=8.4.0,<9.0.0)",
    "vulture (>=2.14,<3.0)",
    "cellpose (>=3.0,<4)",
    "av (>=15.0.0,<16.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "numba (>=0.61.2,<0.62.0)",
    "seaborn>=0.13.2",
    "pyarrow>=21.0.0",
    "memory-profiler>=0.61.0",
    "pyinstrument>=5.1.2",
    "torchvision",
    "torchaudio",
    "h5py>=3.16.0",
]

[project.gui-scripts]
partaker_app = "partaker:main"

[tool.uv]
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/partaker"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes (undefined names, unused imports, etc.)
  "W",    # pycodestyle warnings
  "B",    # bugbear (common bugs and design issues)
  "I",    # isort (import sorting)
  "UP",   # pyupgrade (modernize syntax)
  "RUF",  # ruff-specific rules
  "N",    # pep8-naming
  "ASYNC", # async pitfalls
]
ignore = ["E501"]  # line too long (ruff format handles this)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

